@@ -19,23 +19,37 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+
 import opennlp.tools.util.Span;
 
-import com.nlp4re.service.logic.RequirementLogicImpl_Eng;
+import com.nlp4re.domain.Anchor;
+import com.nlp4re.domain.Modal;
 import com.nlp4re.service.operations.PatternMatcher;
+import com.nlp4re.service.operations.RegexesProvider;
 import com.nlp4re.service.operations.SentenceAnalyzer;
 
 /**
  * Test for {@link RequirementLogicImpl_Eng}
  */
+@ExtendWith(MockitoExtension.class)
 public class RequirementLogicImpl_EngTest {
+
+	@Mock
+	private SentenceAnalyzer mockSentenceAnalyzer;
+	@Mock
+	private PatternMatcher mockPatternMatcher;
+	@Mock
+	private RegexesProvider mockRegexesProvider;
 
 	@Test
 	public void test_getTokensFromSentence_NullPointerException() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.getTokensFromSentence(null));
 	}
@@ -43,11 +57,12 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_getTokensFromSentence() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		when(sentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "return", "tokens" });
 
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		when(mockSentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "return", "tokens" });
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+
 		// when
 		String[] result = requirementLogic.getTokensFromSentence(anyString());
 		// then
@@ -59,9 +74,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_getTagsFromTokens_NullPointerException() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.getTagsFromTokens(null));
 	}
@@ -69,11 +84,11 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_getTagsFromTokens() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		when(sentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "VP", "NNS" });
 
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		when(mockSentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "VP", "NNS" });
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		String[] result = requirementLogic.getTagsFromTokens(new String[] { "tokens" });
 		// then
@@ -87,7 +102,9 @@ public class RequirementLogicImpl_EngTest {
 		// given
 		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
 		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher,
+				mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.parseModalVp(0, null));
 	}
@@ -97,7 +114,9 @@ public class RequirementLogicImpl_EngTest {
 		// given
 		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
 		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher,
+				mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseModalVp(-1, Arrays.asList(new String[] { "return", "tokens" }));
 		// then
@@ -109,36 +128,41 @@ public class RequirementLogicImpl_EngTest {
 		// given
 		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
 		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+
+		when(mockRegexesProvider.getModalRegexes()).thenReturn(List.of(new Modal("should")));
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher,
+				mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseModalVp(2, Arrays.asList(new String[] { "some", "tokens", "should" }));
 		// then
 		assertThat(result, is(true));
 	}
 
-	 @Test
-	 public void test_parseSystemname_NullPointerException() {
-	 // given
-	 SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-	 PatternMatcher matcher = mock(PatternMatcher.class);
-	 RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
-	 // when + then
-	 assertThrows(NullPointerException.class, () -> requirementLogic.parseSystemName(null, 1, 1));
-	 }
+	@Test
+	public void test_parseSystemname_NullPointerException() {
+		// given
+		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
+		PatternMatcher matcher = mock(PatternMatcher.class);
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher,
+				mockRegexesProvider);
+		// when + then
+		assertThrows(NullPointerException.class, () -> requirementLogic.parseSystemName(null, 1, 1));
+	}
 
 	@Test
 	public void test_parseSystemname_returnTrue() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "the", "system", "name" }));
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "DT", "NP", "NP" });
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "the");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -151,14 +175,14 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_noPattern() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "the", "system", "name" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -172,12 +196,12 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_noSystemname() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		// return no system name
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt())).thenReturn(null);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -190,16 +214,16 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_VerbAfterSystemname() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "all", "systems", "of", "the", "something", "have" }));
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "DT", "NP", "NP", "VB" });
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "all_some");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -212,16 +236,16 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_NoVerbAfterSystemname() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "all", "systems", "of", "the", "something", "have" }));
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "DT", "NP", "NP", "MD" });
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "all_some");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -234,15 +258,15 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_ThoseType_returnTrue() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "all", "systems", "of", "the", "something", "have" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "those");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -257,7 +281,9 @@ public class RequirementLogicImpl_EngTest {
 		// given
 		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
 		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher,
+				mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.parseCondition(null, 0, 0));
 
@@ -266,12 +292,11 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseCondition_returnTrue_no_condition() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt())).thenReturn(null);
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -284,15 +309,14 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseCondition_noPattern() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "the", "system", "name" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
 
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "then" }), 0,
 				0);
@@ -305,16 +329,15 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseCondition_returnTrue_If_Then() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "if", ",", "then" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "if");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
 
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "then" }), 1,
 				0);
@@ -327,16 +350,15 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseCondition_returnFalse_If_Then() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "if", ",", "ahhaha" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "if");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
 
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "hahaha" }), 1,
 				0);
@@ -349,14 +371,15 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseCondition_otherConditionTypes() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "while", "system", "haha" }));
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		Span mockSpan = new Span(0, 0, "while_during");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -366,24 +389,22 @@ public class RequirementLogicImpl_EngTest {
 		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
 	}
 
-	 @Test
-	 public void test_parseAnchor_NullPointerException() {
-	 // given
-	 SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-	 PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-	 RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-	 mockPatternMatcher);
-	 // when + then
-	 assertThrows(NullPointerException.class, () -> requirementLogic.parseAnchor(null, null, 1, 1));
-	 }
+	@Test
+	public void test_parseAnchor_NullPointerException() {
+		// given
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+		// when + then
+		assertThrows(NullPointerException.class, () -> requirementLogic.parseAnchor(null, null, 1, 1));
+	}
 
 	@Test
 	public void test_parseAnchor_ProvideType_ReturnFalse() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(1);
 		Span mockSpan = new Span(0, 0, "provide");
@@ -405,10 +426,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseAnchor_ProvideType_ReturnFalse_noVerbAfterAbilityTo() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(1);
 		Span mockSpan = new Span(0, 0, "provide");
@@ -431,10 +451,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseAnchor_ProvideType_returnTrue() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		Span mockSpan = new Span(0, 0, "provide");
@@ -456,16 +475,13 @@ public class RequirementLogicImpl_EngTest {
 
 	@Test
 	public void test_parseAnchor_BeAbleTo_ReturnFalse() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		Span mockSpan = new Span(0, 0, "be_able_to");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
-		when(mockSentenceAnalyzer.getChunks(any(String[].class), any(String[].class)))
-				.thenReturn(Arrays.asList(new String[] { "MD", "VB" }));
 		// when
 		boolean result = requirementLogic.parseAnchor(
 				Arrays.asList(
@@ -480,16 +496,13 @@ public class RequirementLogicImpl_EngTest {
 
 	@Test
 	public void test_parseAnchor_BeAbleTo_ReturnTrue() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		Span mockSpan = new Span(0, 0, "be_able_to");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
-		when(mockSentenceAnalyzer.getChunks(any(String[].class), any(String[].class)))
-				.thenReturn(Arrays.asList(new String[] { "MD", "VB" }));
 		// when
 		boolean result = requirementLogic.parseAnchor(
 				Arrays.asList(
@@ -505,18 +518,16 @@ public class RequirementLogicImpl_EngTest {
 
 	@Test
 	public void test_parseAnchor_ReturnFalse() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		Span mockSpan = new Span(0, 0, "provide");
 		Span mockSpan1 = new Span(0, 0, "be_able_to");
 
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan, mockSpan1 });
-		when(mockSentenceAnalyzer.getChunks(any(String[].class), any(String[].class)))
-				.thenReturn(Arrays.asList(new String[] { "MD", "VB" }));
+		when(mockRegexesProvider.getAnchorRegexes()).thenReturn(List.of(new Anchor("the", "the .")));
 		// when
 		boolean result = requirementLogic.parseAnchor(
 				Arrays.asList(
@@ -531,10 +542,9 @@ public class RequirementLogicImpl_EngTest {
 
 	@Test
 	public void test_parseAnchor_NoPattern_ReturnTrue() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
@@ -551,24 +561,22 @@ public class RequirementLogicImpl_EngTest {
 		verify(mockSentenceAnalyzer, times(0)).getChunks(any(String[].class), any(String[].class));
 	}
 
-	 @Test
-	 public void test_parseObject_NullPointerException() {
-	
-	 // given
-	 SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-	 PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-	 RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-	 mockPatternMatcher);
-	 // when + then
-	 assertThrows(NullPointerException.class, () -> requirementLogic.parseObject(null, null, 1));
-	 }
+	@Test
+	public void test_parseObject_NullPointerException() {
+
+		// given
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+		// when + then
+		assertThrows(NullPointerException.class, () -> requirementLogic.parseObject(null, null, 1));
+	}
 
 	@Test
 	public void test_parseObject_returnFalse_noObject() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getObjects(anyString(), any(String[].class))).thenReturn(null);
 		// when
@@ -584,10 +592,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseObject_NoPattern_returnFalse() {
 		// given
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getObjects(anyString(), any(String[].class))).thenReturn("some String");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
@@ -604,10 +611,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseObject_returnTrue() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getObjects(anyString(), any(String[].class))).thenReturn("a String");
 		Span mockSpan = new Span(0, 0, "all_the");
@@ -622,25 +628,23 @@ public class RequirementLogicImpl_EngTest {
 		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
 	}
 
-	 @Test
-	 public void test_parseDetails_NullPointerException() {
-	 // given
-	 SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-	 PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-	 RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-	 mockPatternMatcher);
-	 // when + then
-	 assertThrows(NullPointerException.class, () -> requirementLogic.parseDetails(null, 1));
-	
-	 }
+	@Test
+	public void test_parseDetails_NullPointerException() {
+		// given
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+		// when + then
+		assertThrows(NullPointerException.class, () -> requirementLogic.parseDetails(null, 1));
+
+	}
 
 	@Test
 	public void test_parseDetails_returnTrue_withoutCondition() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		// when
 		boolean result = requirementLogic.parseDetails(Arrays.asList(new String[] { "the", "if" }), 1);
@@ -652,10 +656,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseDetails_returnTrue_with_condition() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		Span mockSpan = new Span(0, 0, "condition");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
 
@@ -670,10 +673,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseDetails_returnTrue_noPattern() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
 
 		// when
@@ -688,10 +690,9 @@ public class RequirementLogicImpl_EngTest {
 	public void test_parseDetails_returnFalse() {
 
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		Span mockSpan = new Span(0, 0, "all_the");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
@@ -707,10 +708,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_getSentences_NullPointerException() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.getSentences(null));
 
@@ -719,10 +719,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_getSentences_True() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		// when
 		Map<Integer, String> result = requirementLogic.getSentences("some. sentence");
@@ -734,65 +733,53 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_doParse_NullException() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.doParse(null));
 	}
-	
+
 	@Test
 	public void test_doParse_nonCompliant() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "The", "VMS", "system", "will",
 				"consume", "as", "any", "units", "of", "energy", "as", "possible", "." });
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class)))
 				.thenReturn(new String[] { "DT", "NN", "NN", "MD", "VB", "IN", "IN", "NNS", "IN", "NN", "IN", "NN" });
 		when(mockSentenceAnalyzer.getModalIndex(anyList(), anyInt())).thenReturn(1);
-		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
-				.thenReturn(Arrays.asList(new String[] { "the", "VMS", "System" }));
-
 		Map<Integer, String> sentences = new HashMap<Integer, String>();
 		sentences.put(1, anyString());
 		// when
 		List<Map<Integer, String>> result = requirementLogic.doParse(sentences);
 		// then
 		assertThat(result.size(), is(3));
-		assertEquals(result.get(1).get(1) ,"1");
+		assertEquals(result.get(1).get(1), "1");
 	}
-	
+
 	@Test
 	public void test_doParse_Compliant() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
 
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		when(mockSentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "The", "VMS", "system", "should",
 				"consume", "the", "unit", "of", "energy", "as", "possible", "." });
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class)))
-				.thenReturn(new String[] { "DT", "NN", "NN", "MD", "VB","DT", "NN", "IN", "NN", "IN", "NN" });
+				.thenReturn(new String[] { "DT", "NN", "NN", "MD", "VB", "DT", "NN", "IN", "NN", "IN", "NN" });
 		when(mockSentenceAnalyzer.getModalIndex(anyList(), anyInt())).thenReturn(1);
-		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
-				.thenReturn(Arrays.asList(new String[] { "The", "VMS", "System" }));
-		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
-		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt())).thenReturn(null);
-		when(mockSentenceAnalyzer.getObjects(anyString(), any(String[].class))).thenReturn("the unit of energy");
-				
+
 		Map<Integer, String> sentences = new HashMap<Integer, String>();
 		sentences.put(1, anyString());
 		// when
 		List<Map<Integer, String>> result = requirementLogic.doParse(sentences);
 		// then
 		assertThat(result.size(), is(3));
-		assertEquals(result.get(1).get(1) ,"1");
+		assertEquals(result.get(1).get(1), "1");
 	}
+
 }
